# pytestdocgen

./: EXAMPLE.md  LICENSE.md  README.md  TEST_DOC.md  pyproject.toml  setup.py
pytestdocgen/: __init__.py  __main__.py  gdocstring.py  gendoc.py  object.py  parse.py
pytestdocgen/templates/: test_case.md
test_package/: README.md  setup.py
test_package/mock_package/: __init__.py
test_package/tests/integration/: test_composite.py
test_package/tests/unit/composite_calc/: test_sigma.py
test_package/tests/unit/simple_calc/: test_add.py  test_sub.py
tests/: test_conf.py  test_gdocstring.py  test_gendoc.py  test_load.py
