[tool.poetry]
name = "pytestdocgen"
version = "0.0.1"
description = "A rather formal documentation generator for pytest suite"
authors = ["Milhan KIM <kimmilhan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
parso = "^0.5.1"
cchardet = "^2.1"
jinja2 = "^2.10"
docopt = "^0.6.2"
toml = "^0.10.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
isort = "*"
black = "==19.3b0"

[tool.poetry.scripts]
pytestdocgen = "pytestdocgen.__main__:run"

[tool.black]
line-length = 80
target-version = ['py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | venv
)/
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.isort]
line_length = 80
use_parentheses = true
include_trailing_comma = true
multi_line_output = 3
skip_glob = ".egg,.git,.hg,.mypy_cache,.tox,.venv,_build,buck-out,build,dist,venv,node_modules"
